<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:contentDescription="@string/imag_intro"
        android:focusable="false"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_foto2" />

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="411dp"
        android:layout_marginTop="210dp"
        android:background="@color/md_black_1000_20"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correo_Textlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/Correo"
            android:outlineProvider="background"
            android:textColorHint="#FFFFFF"
            android:visibility="visible"
            app:boxStrokeColor="#FFFFFF"
            app:endIconCheckable="false"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/divider_horizontal_textfield"
            app:errorTextColor="@color/md_text_white"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contra_Textlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:endIconMode="password_toggle"
            app:endIconTint="#FFFFFF"
            app:errorEnabled="true"
            app:errorIconDrawable="@android:drawable/divider_horizontal_bright"
            app:errorTextColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contra_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="5sp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:minHeight="48dp"
            android:text="@string/forgetpass"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/inicioses_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/md_text_white_87"
            android:backgroundTintMode="screen"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Inicio_sesion"
            android:textColor="@color/md_black_1000_75"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newuser_Textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/md_white_1000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Register_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/register"
                android:textAlignment="viewStart"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>