<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="screen"
    tools:context=".ui.register.RegisterActivity">

  <ImageView
      android:id="@+id/Registro_View"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"
      android:contentDescription="@string/register_fot"
      android:scaleType="centerCrop"
      app:srcCompat="@drawable/ic_foto1" />

  <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:contentDescription="@string/scroll"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/MainLinea_layout"
            android:layout_width="333dp"
            android:layout_height="505dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="5dp"
            android:background="@color/md_black_1000_20"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/Usuario_TextLayout"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15sp"
              android:textColorHint="#FFFFFF"
              app:boxStrokeColor="#FFFFFF"
              app:errorEnabled="true"
              app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Usuario_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:hint="@string/Nombre_Usuario"
                android:textColor="#FFFFFF" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/Correo_layout"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15sp"
              android:textColorHint="#FFFFFF"
              app:boxStrokeColor="#FFFFFF"
              app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Correo_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/contra_layout"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15sp"
              android:textColorHint="#FFFFFF"
              app:boxStrokeColor="#FFFFFF"
              app:endIconMode="password_toggle"
              app:endIconTint="#FFFFFF"
              app:errorIconDrawable="@android:drawable/divider_horizontal_textfield"
              app:errorTextColor="#FFFFFF"
              app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contra_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:hint="@string/Confirmacion"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                tools:ignore="DuplicateSpeakableTextCheck" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/confir_layout"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15sp"
              android:textColorHint="#FFFFFF"
              app:boxStrokeColor="#FFFFFF"
              app:endIconMode="password_toggle"
              app:endIconTint="#FFFFFF"
              app:errorEnabled="true"
              app:errorIconDrawable="@android:drawable/divider_horizontal_textfield"
              app:errorTextColor="@color/md_text_white"
              app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confir_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:hint="@string/Confirmacion"
                android:inputType="textPassword"
                android:textColor="#FFFFFF" />

          </com.google.android.material.textfield.TextInputLayout>

          <Button
              android:id="@+id/button_register"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="110sp"
              android:layout_marginTop="15sp"
              android:backgroundTint="@color/md_text_white_87"
              android:gravity="center"
              android:text="@string/Registro"
              android:textColor="@color/md_black_1000_75" />

        </LinearLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>